# typefully-mcp-server

./: .gitignore  CURSOR_SETUP.md  LICENSE  README.md  cursor-mcp-config.example.json  env.example  pyproject.toml  requirements.txt  test_mcp_direct.py  test_mcp_tools.py  test_read_api.py  test_server.py  verify_cursor_setup.py
src/typefully_mcp_server/: __init__.py  client.py  keychain.py  server.py  types.py
